Création d'un observable: compteur

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
       <li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
     </ul>
   </div>
+  <div class="navbar-right">
+    <p>Vous êtes connecté depuis {{ secondes }} secondes ! </p>
+  </div>
 </nav>
 
 <div class="container">
