--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -7,4 +7,6 @@
     </ul>
     <button class="btn btn-success" (click)="onAllumer()">Tout allumer</button>
     <button class="btn btn-danger" (click)="onEteindre()">Tout éteindre</button>
+    <button class="btn btn-primary" (click)="onSave()">Enregistrer</button>
+    <button class="btn btn-primary" (click)="onFetch()">Récupérer les données du serveur</button>
 </div>
